welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: not found: value paintLine
    paintLine(colors);
    ^Array1:22: error: not found: value i
    mark(colors(i));
                ^