welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var worldHeight:Int = getWorldHeight()
  var colors = new Array[Color](worldHeight)
  
  // read colors in first column
  for (i <- 0 to worldHeight - 1) {
    colors(i) = getGroundColor()
    forward()
  }
  
  for (i <- 1 to worldHeight) {
    forward(); left(); forward(); right();
    paintLine(colors);
  }
  
  
}

def paintLines(colors: Array[Color]) {
  for (c <- colors) {
    mark(colors(i));
    forward();
  }
}

def mark(c:Color) {
  setBrushColor(c);
  brushDown();
  brushUp();
}